--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ cineminha-*.tar
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
+
+# Environment variables
+.env
